--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             transform: translateY(0);
         }
     </style>
-    <script src="https://terminal.jup.ag/main-v2.js"></script>
+    <script src="https://terminal.jup.ag/main-v1.js" data-preload></script>
 </head>
 <body class="bg-gradient-to-b from-[#d5bf9b] to-[#f9f4f0] min-h-screen">
     <!-- Modern floating navigation -->
@@ -292,8 +292,27 @@
 
     <!-- Jupiter Terminal at the bottom -->
     <div class="container mx-auto px-4 py-8">
-        <div id="jupiter-terminal-container" class="w-full max-w-2xl mx-auto">
-            <div id="jupiter-terminal"></div>
+        <div id="integrated-terminal" class="w-full max-w-2xl mx-auto p-4 rounded-2xl bg-white/5">
+            <script>
+                window.Jupiter.init({
+                    displayMode: "integrated",
+                    integratedTargetId: "integrated-terminal",
+                    endpoint: "https://solana-mainnet.g.alchemy.com/v2/your-api-key", // You'll need to replace this with a real Solana RPC endpoint
+                    strictTokenList: true,
+                    defaultExplorer: "Solscan",
+                    defaultPair: {
+                        fromMint: "So11111111111111111111111111111111111111112", // SOL
+                        toMint: "gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump"  // BRACE
+                    },
+                    containerStyles: {
+                        width: "100%",
+                        height: "600px",
+                        border: "1px solid #E5E7EB",
+                        borderRadius: "16px",
+                        background: "white"
+                    }
+                });
+            </script>
         </div>
     </div>
 
