--- a/index.html
+++ b/index.html
@@ -261,65 +261,35 @@
         </div>
     </footer>
 
-    <div class="scroll-container">
-        <div class="scrolling-wrapper">
-            <div class="scrolling-text">
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-            </div>
-            <div class="scrolling-text">
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-                <span class="brace-text">$BRACE</span>
-            </div>
-        </div>
-    </div>
-
-    <div class="fixed inset-0 z-50 flex items-center justify-center bg-white">
+    <div class="container mx-auto px-4 py-8">
         <!-- Jupiter Terminal -->
-        <div id="integrated-terminal" style="width: 100%; height: 100vh; max-width: 500px;"></div>
+        <div id="integrated-terminal" style="width: 100%; height: 600px; margin: 0 auto; max-width: 500px;"></div>
     </div>
 
     <!-- Jupiter initialization -->
     <script src="https://terminal.jup.ag/main-v1.js"></script>
     <script>
-        window.onload = function() {
-            window.Jupiter.init({
-                mode: "integrated",
-                endpoint: "https://api.mainnet-beta.solana.com",
-                integratedTargetId: "integrated-terminal",
-                defaultExplorer: "Solscan",
-                defaultPair: {
-                    fromMint: "So11111111111111111111111111111111111111112",
-                    toMint: "gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump"
-                },
-                containerStyles: {
-                    width: '100%',
-                    height: '100%',
-                    display: 'flex',
-                    position: 'relative',
-                    zIndex: '50',
-                    background: 'white',
-                    border: '1px solid #e5e7eb',
-                    borderRadius: '16px',
-                }
-            });
-        };
+        document.addEventListener('DOMContentLoaded', function() {
+            setTimeout(() => {
+                window.Jupiter.init({
+                    mode: "integrated",
+                    endpoint: "https://api.mainnet-beta.solana.com",
+                    integratedTargetId: "integrated-terminal",
+                    defaultExplorer: "Solscan",
+                    defaultPair: {
+                        fromMint: "So11111111111111111111111111111111111111112",
+                        toMint: "gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump"
+                    },
+                    containerStyles: {
+                        width: '100%',
+                        height: '600px',
+                        border: '1px solid #e5e7eb',
+                        borderRadius: '16px',
+                        background: 'white',
+                    }
+                });
+            }, 1000); // Small delay to ensure everything is loaded
+        });
     </script>
 
     <!-- Keep the wallet connection script separate -->
