--- a/index.html
+++ b/index.html
@@ -36,279 +36,76 @@
             background-clip: text;
             color: transparent;
         }
-
-        .scroll-container {
-            overflow: hidden;
-            background: var(--primary);
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            padding: 12px 0;
-        }
-
-        .scrolling-text {
-            display: flex;
-            white-space: nowrap;
-            animation: scroll-left 20s linear infinite;
-        }
-
-        @keyframes scroll-left {
-            0% {
-                transform: translateX(0);
-            }
-            100% {
-                transform: translateX(-50%);
-            }
-        }
-
-        .brace-text {
-            color: white;
-            font-weight: bold;
-            font-size: 24px;
-            margin: 0 20px;
-            flex-shrink: 0;
-        }
-
-        /* Create a duplicate set of text for seamless scrolling */
-        .scrolling-wrapper {
-            display: flex;
-        }
-
-        .connect-wallet-button {
-            background: linear-gradient(45deg, var(--primary), var(--accent));
-            color: white;
-            padding: 12px 24px;
-            border-radius: 12px;
-            font-weight: 600;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-        }
-
-        .connect-wallet-button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 8px -1px rgba(0, 0, 0, 0.15), 0 3px 6px -1px rgba(0, 0, 0, 0.08);
-        }
-
-        .connect-wallet-button:active {
-            transform: translateY(0);
-        }
     </style>
     <script src="https://terminal.jup.ag/main-v2.js"></script>
 </head>
 <body class="bg-gradient-to-b from-[#d5bf9b] to-[#f9f4f0] min-h-screen">
-    <!-- Modern floating navigation -->
-    <nav class="fixed top-4 left-1/2 transform -translate-x-1/2 glass-effect px-6 py-3 rounded-full z-50 shadow-lg">
-        <div class="flex space-x-6 text-sm font-medium">
-            <a href="#what-is" class="text-white hover:text-opacity-80 transition">$BRACE</a>
-            <a href="#tokenomics" class="text-white hover:text-opacity-80 transition">Tokenomics</a>
-            <a href="#how-to-buy" class="text-white hover:text-opacity-80 transition">How to Buy</a>
-            <a href="#full-story" class="text-white hover:text-opacity-80 transition">Story</a>
-        </div>
-    </nav>
-
-    <!-- Hero Section -->
-    <header class="h-screen flex items-center justify-center relative overflow-hidden">
-        <div class="absolute inset-0 bg-[url('https://imgur.com/91ra9UJ.jpg')] bg-cover bg-center"></div>
-        <div class="absolute inset-0 bg-black bg-opacity-40"></div>
-        <div class="relative z-10 text-center">
-            <h1 class="text-6xl font-bold text-white mb-4">$BRACE</h1>
-            <p class="text-xl text-white/90">The goodest boy on Solana</p>
-        </div>
-    </header>
-
-    <main class="max-w-6xl mx-auto px-4 py-16 space-y-32">
-        <!-- What is Section -->
-        <section id="what-is" class="scroll-mt-20">
-            <div class="bg-white rounded-3xl p-8 shadow-xl">
-                <h2 class="text-4xl font-bold gradient-text mb-8">What is $BRACE?</h2>
-                <div class="grid md:grid-cols-2 gap-8 items-center">
-                    <div class="space-y-6">
-                        <p class="text-lg text-gray-700 leading-relaxed">
-                            $BRACE is inspired by Wesley, the brace-wearing Golden Retriever pup, bringing wholesome vibes to the Solana blockchain!
-                        </p>
-                        <div class="flex space-x-6">
-                            <a href="https://x.com/Brace_Dog" class="gradient-text hover:opacity-80 transition flex items-center text-lg">
-                                <svg class="w-6 h-6 mr-2" viewBox="0 0 24 24" style="fill: var(--primary)">
-                                    <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
-                                </svg>
-                                Twitter
-                            </a>
-                            <a href="https://t.me/BraceDog" class="gradient-text hover:opacity-80 transition flex items-center text-lg">
-                                <svg class="w-6 h-6 mr-2" viewBox="0 0 24 24" style="fill: var(--primary)">
-                                    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm4.64 6.8c-.15 1.58-.8 5.42-1.13 7.19-.14.75-.42 1-.68 1.03-.58.05-1.02-.38-1.58-.75-.88-.58-1.38-.94-2.23-1.5-.99-.65-.35-1.01.22-1.59.15-.15 2.71-2.48 2.76-2.69.01-.03.01-.14-.07-.2-.08-.06-.19-.04-.27-.02-.12.02-1.96 1.25-5.54 3.69-.52.36-1 .53-1.42.52-.47-.01-1.37-.26-2.03-.48-.82-.27-1.47-.42-1.42-.88.03-.24.35-.49.96-.75 3.78-1.65 6.31-2.74 7.58-3.27 3.61-1.51 4.36-1.77 4.85-1.78.11 0 .35.03.5.16.13.13.17.31.19.43-.01.07-.01.15-.02.19z"/>
-                                </svg>
-                                Telegram
-                            </a>
-                        </div>
-                    </div>
-                    <div class="aspect-video rounded-2xl overflow-hidden shadow-lg">
-                        <iframe class="w-full h-full" src="https://www.youtube.com/embed/46BHIaLmOYQ" allowfullscreen></iframe>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Tokenomics Section -->
-        <section id="tokenomics" class="scroll-mt-20">
-            <div class="bg-white rounded-3xl p-8 shadow-xl">
-                <h2 class="text-4xl font-bold gradient-text mb-8">Tokenomics</h2>
-                <div class="grid grid-cols-2 md:grid-cols-3 gap-6">
-                    <div class="p-6 bg-gray-50 rounded-2xl">
-                        <p class="font-semibold text-lg">Supply</p>
-                        <p class="text-2xl text-primary">1,000,000,000</p>
-                    </div>
-                    <div class="p-6 bg-gray-50 rounded-2xl">
-                        <p class="font-semibold text-lg">Tax</p>
-                        <p class="text-2xl text-primary">0%</p>
-                    </div>
-                    <div class="p-6 bg-gray-50 rounded-2xl">
-                        <p class="font-semibold text-lg">LP Status</p>
-                        <p class="text-2xl text-primary">Locked</p>
-                    </div>
-                </div>
-                <div class="mt-8 p-4 bg-gray-50 rounded-xl">
-                    <a href="https://solscan.io/account/gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump" 
-                       class="font-mono text-sm break-all text-primary hover:underline">
-                        Token: gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump
-                    </a>
-                </div>
-            </div>
-        </section>
-
-        <!-- Story Section -->
-        <section id="story" class="scroll-mt-20">
-            <div class="bg-white rounded-3xl p-8 shadow-xl">
-                <h2 class="text-4xl font-bold gradient-text mb-8">Wesley's Story</h2>
-                <div class="aspect-video rounded-2xl overflow-hidden shadow-lg mb-8">
-                    <iframe class="w-full h-full" src="https://www.youtube.com/embed/QUy2z9k5KFA" allowfullscreen></iframe>
-                </div>
-                <div class="flex justify-center space-x-4">
-                    <a href="https://www.dailymail.co.uk/femail/article-3471545/The-cutest-brace-face-Adorable-golden-retriever-puppy-wear-BRACES-instant-hit-online.html" 
-                       class="px-6 py-3 bg-primary text-white rounded-full hover:opacity-90 transition">Read Article</a>
-                    <a href="https://www.reddit.com/r/aww/comments/ve5kn8/oc_golden_retriever_gets_his_braces_removed/" 
-                       class="px-6 py-3 bg-secondary text-white rounded-full hover:opacity-90 transition">Reddit Post</a>
-                </div>
-            </div>
-        </section>
-
-        <!-- How to Buy Section -->
-        <section id="how-to-buy" class="scroll-mt-20">
-            <div class="bg-white rounded-3xl p-8 shadow-xl">
-                <h2 class="text-4xl font-bold gradient-text mb-8">How to Buy</h2>
-                <div class="space-y-8">
-                    <div class="flex items-start gap-4">
-                        <div class="w-8 h-8 rounded-full bg-gradient-to-r from-primary to-secondary flex items-center justify-center text-white font-bold">1</div>
-                        <div>
-                            <h3 class="text-xl font-semibold mb-2">Create a Phantom Wallet</h3>
-                            <p class="text-gray-700">Download Phantom Wallet from <a href="https://phantom.app" target="_blank" class="gradient-text hover:opacity-80 transition">phantom.app</a> and set up your wallet.</p>
-                        </div>
-                    </div>
-                    <div class="flex items-start gap-4">
-                        <div class="w-8 h-8 rounded-full bg-gradient-to-r from-primary to-secondary flex items-center justify-center text-white font-bold">2</div>
-                        <div>
-                            <h3 class="text-xl font-semibold mb-2">Add SOL to your wallet</h3>
-                            <p class="text-gray-700">Purchase SOL from an exchange and send it to your Phantom Wallet.</p>
-                        </div>
-                    </div>
-                    <div class="flex items-start gap-4">
-                        <div class="w-8 h-8 rounded-full bg-gradient-to-r from-primary to-secondary flex items-center justify-center text-white font-bold">3</div>
-                        <div class="w-full">
-                            <h3 class="text-xl font-semibold mb-2">Connect your wallet & swap</h3>
-                            <p class="text-gray-700 mb-4">Connect your Phantom Wallet and swap SOL for $BRACE using Jupiter Exchange below.</p>
-                            <div class="flex flex-col items-start gap-4">
-                                <button id="connect-wallet" class="connect-wallet-button">
-                                    <div class="flex items-center gap-2">
-                                        <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z" stroke="currentColor" stroke-width="2"/>
-                                            <path d="M12 8V16M8 12H16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                                        </svg>
-                                        Connect Phantom Wallet
-                                    </div>
-                                </button>
-                                <div id="wallet-status" class="text-gray-600 font-medium"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Disclaimer -->
-        <div class="text-center text-sm text-gray-600 mt-16">
-            <p>$BRACE is a meme coin with no intrinsic value or expectation of financial return. For entertainment purposes only.</p>
-        </div>
-    </main>
-
-    <!-- Footer -->
-    <footer class="bg-primary text-white py-8 mt-32">
-        <div class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center">
-            <p class="gradient-text font-semibold">© 2025 Brace Dog</p>
-            <div class="flex space-x-6 mt-4 md:mt-0">
-                <a href="https://x.com/Brace_Dog" class="gradient-text hover:opacity-80 transition flex items-center">
-                    <svg class="w-5 h-5 mr-2" viewBox="0 0 24 24" style="fill: var(--primary)">
-                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
-                    </svg>
-                    Twitter
-                </a>
-                <a href="https://t.me/BraceDog" class="gradient-text hover:opacity-80 transition flex items-center">
-                    <svg class="w-5 h-5 mr-2" viewBox="0 0 24 24" style="fill: var(--primary)">
-                        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm4.64 6.8c-.15 1.58-.8 5.42-1.13 7.19-.14.75-.42 1-.68 1.03-.58.05-1.02-.38-1.58-.75-.88-.58-1.38-.94-2.23-1.5-.99-.65-.35-1.01.22-1.59.15-.15 2.71-2.48 2.76-2.69.01-.03.01-.14-.07-.2-.08-.06-.19-.04-.27-.02-.12.02-1.96 1.25-5.54 3.69-.52.36-1 .53-1.42.52-.47-.01-1.37-.26-2.03-.48-.82-.27-1.47-.42-1.42-.88.03-.24.35-.49.96-.75 3.78-1.65 6.31-2.74 7.58-3.27 3.61-1.51 4.36-1.77 4.85-1.78.11 0 .35.03.5.16.13.13.17.31.19.43-.01.07-.01.15-.02.19z"/>
-                    </svg>
-                    Telegram
-                </a>
-            </div>
-        </div>
-    </footer>
-
+    <!-- Content Sections -->
     <div class="container mx-auto px-4 py-8">
         <div id="jupiter-terminal-container" class="w-full max-w-2xl mx-auto">
             <div id="jupiter-terminal"></div>
         </div>
     </div>
 
+    <!-- Script placed at the end of the body -->
     <script>
         // Initialize Jupiter Terminal
-        window.onload = function() {
-            window.Jupiter.init({
-                displayMode: 'integrated',
-                integratedTargetId: 'jupiter-terminal',
-                defaultExplorer: 'Solscan',
-                defaultPair: {
-                    fromMint: 'So11111111111111111111111111111111111111112', // SOL
-                    toMint: 'gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump'  // BRACE
-                },
-                containerStyles: {
-                    width: '100%',
-                    height: '600px',
-                    border: '1px solid #E5E7EB',
-                    borderRadius: '16px',
-                }
-            });
-        };
+        document.addEventListener("DOMContentLoaded", function() {
+            const terminalContainer = document.getElementById('jupiter-terminal');
+
+            if (!terminalContainer) {
+                console.error('Jupiter terminal container not found.');
+                return;
+            }
+
+            try {
+                window.Jupiter.init({
+                    displayMode: 'integrated',
+                    integratedTargetId: 'jupiter-terminal',
+                    defaultExplorer: 'Solscan',
+                    defaultPair: {
+                        fromMint: 'So11111111111111111111111111111111111111112', // SOL
+                        toMint: 'gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump'  // BRACE
+                    },
+                    containerStyles: {
+                        width: '100%',
+                        height: '600px',
+                        border: '1px solid #E5E7EB',
+                        borderRadius: '16px',
+                    }
+                });
+                console.log('Jupiter terminal initialized successfully.');
+            } catch (error) {
+                console.error('Failed to initialize Jupiter terminal:', error);
+            }
+        });
 
         // Wallet connection logic
-        async function connectPhantomWallet() {
-            try {
-                const { solana } = window;
-                
-                if (!solana?.isPhantom) {
-                    alert('Please install Phantom wallet!');
-                    return;
+        document.addEventListener("DOMContentLoaded", function() {
+            const connectWalletButton = document.getElementById('connect-wallet');
+            if (!connectWalletButton) return;
+
+            connectWalletButton.addEventListener('click', async function() {
+                try {
+                    const { solana } = window;
+
+                    if (!solana?.isPhantom) {
+                        alert('Please install Phantom wallet!');
+                        return;
+                    }
+
+                    const response = await solana.connect();
+                    const publicKey = response.publicKey.toString();
+                    console.log('Connected with Public Key:', publicKey);
+
+                    document.getElementById('wallet-status').textContent = 
+                        'Connected: ' + publicKey.slice(0, 4) + '...' + publicKey.slice(-4);
+                } catch (err) {
+                    console.error('Wallet connection failed:', err);
+                    alert('Failed to connect wallet: ' + err.message);
                 }
-
-                const response = await solana.connect();
-                const publicKey = response.publicKey.toString();
-                console.log('Connected with Public Key:', publicKey);
-                
-                document.getElementById('wallet-status').textContent = 'Connected: ' + publicKey.slice(0,4) + '...' + publicKey.slice(-4);
-            } catch (err) {
-                console.error(err);
-                alert('Failed to connect wallet: ' + err.message);
-            }
-        }
-
-        document.getElementById('connect-wallet').addEventListener('click', connectPhantomWallet);
+            });
+        });
     </script>
 </body>
 </html>
