--- a/index.html
+++ b/index.html
@@ -96,11 +96,9 @@
 
         #jupiter-terminal {
             min-height: 600px;
-            border: 1px solid #ccc;
-            border-radius: 16px;
             background: #fff;
-            display: block !important; /* Force display */
-            visibility: visible !important; /* Force visibility */
+            display: block !important;
+            visibility: visible !important;
         }
 
         #jupiter-terminal-container {
@@ -283,19 +281,7 @@
     </div>
 
     <script>
-        // Create a function to check if element exists
-        function checkElementExists() {
-            const element = document.getElementById('jupiter-terminal');
-            if (element) {
-                console.log('Jupiter terminal element found, initializing...');
-                initJupiter();
-            } else {
-                console.log('Waiting for Jupiter terminal element...');
-                setTimeout(checkElementExists, 100);
-            }
-        }
-
-        // Initialize Jupiter function
+        // Function to initialize Jupiter Terminal
         function initJupiter() {
             try {
                 console.log('Starting Jupiter initialization...');
@@ -304,19 +290,17 @@
                     integratedTargetId: 'jupiter-terminal',
                     defaultExplorer: 'Solscan',
                     defaultPair: {
-                        fromMint: 'So11111111111111111111111111111111111111112',
-                        toMint: 'gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump'
+                        fromMint: 'So11111111111111111111111111111111111111112', // SOL
+                        toMint: 'gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump'  // BRACE
                     },
                     containerStyles: {
                         width: '100%',
                         height: '600px',
                         border: '1px solid #E5E7EB',
                         borderRadius: '16px',
-                        display: 'block',
-                        visibility: 'visible',
                     }
                 });
-                console.log('Jupiter initialization completed');
+                console.log('Jupiter initialization completed.');
             } catch (error) {
                 console.error('Jupiter initialization failed:', error);
                 const terminal = document.getElementById('jupiter-terminal');
@@ -326,28 +310,40 @@
             }
         }
 
-        // Load Jupiter script dynamically
+        // Function to dynamically load Jupiter script
         function loadJupiterScript() {
             const script = document.createElement('script');
             script.src = 'https://terminal.jup.ag/main-v2.js';
-            script.onload = function() {
-                console.log('Jupiter script loaded');
-                checkElementExists();
+            script.onload = function () {
+                console.log('Jupiter script loaded successfully.');
+                initJupiter();
             };
-            script.onerror = function() {
-                console.error('Failed to load Jupiter script');
+            script.onerror = function () {
+                console.error('Failed to load Jupiter script.');
+                const terminal = document.getElementById('jupiter-terminal');
+                if (terminal) {
+                    terminal.innerHTML = `<p class="text-red-600">Unable to load Jupiter terminal. Please check your internet connection or try again later.</p>`;
+                }
             };
             document.body.appendChild(script);
         }
 
-        // Start the process when the DOM is ready
-        document.addEventListener('DOMContentLoaded', loadJupiterScript);
+        // Start the process when the DOM is fully loaded
+        document.addEventListener('DOMContentLoaded', function () {
+            const terminalContainer = document.getElementById('jupiter-terminal-container');
+            if (!terminalContainer) {
+                console.error('Jupiter terminal container is missing from the DOM.');
+                return;
+            }
+            console.log('Loading Jupiter script...');
+            loadJupiterScript();
+        });
 
-        // Wallet connection logic
+        // Phantom Wallet Connection Logic
         async function connectPhantomWallet() {
             try {
                 const { solana } = window;
-                
+
                 if (!solana?.isPhantom) {
                     alert('Please install Phantom wallet!');
                     return;
@@ -355,16 +351,28 @@
 
                 const response = await solana.connect();
                 const publicKey = response.publicKey.toString();
-                console.log('Connected with Public Key:', publicKey);
-                
-                document.getElementById('wallet-status').textContent = 'Connected: ' + publicKey.slice(0,4) + '...' + publicKey.slice(-4);
+                console.log('Wallet connected:', publicKey);
+
+                const walletStatus = document.getElementById('wallet-status');
+                if (walletStatus) {
+                    walletStatus.textContent =
+                        'Connected: ' + publicKey.slice(0, 4) + '...' + publicKey.slice(-4);
+                }
             } catch (err) {
-                console.error(err);
+                console.error('Wallet connection failed:', err);
                 alert('Failed to connect wallet: ' + err.message);
             }
         }
 
-        document.getElementById('connect-wallet').addEventListener('click', connectPhantomWallet);
+        // Add event listener for wallet connection button
+        document.addEventListener('DOMContentLoaded', function () {
+            const walletButton = document.getElementById('connect-wallet');
+            if (walletButton) {
+                walletButton.addEventListener('click', connectPhantomWallet);
+            } else {
+                console.error('Connect wallet button not found.');
+            }
+        });
     </script>
 </body>
 </html>
