--- a/index.html
+++ b/index.html
@@ -214,12 +214,7 @@
                                 <div class="border-black border-2 w-full p-2">
                                     <h3 class="mb-2 text-white text-3xl text-shadow tracking-wide font-extrabold uppercase">Swap</h3>
                                     <div class="border-black border-2 bg-secondary flex flex-col justify-center">
-                                        <iframe 
-                                            src="https://jup.ag/swap/SOL-APPLE" 
-                                            frameborder="0"
-                                            title="Jupiter Swap"
-                                            style="width: 100%; height: 600px; border: none;"
-                                        ></iframe>
+                                        <div id="jupiter-terminal"></div>
                                     </div>
                                 </div>
                             </div>
@@ -266,47 +261,21 @@
         </div>
     </footer>
 
-    <div class="container mx-auto px-4 py-8">
-        <div id="jupiter-terminal-container" class="w-full max-w-2xl mx-auto">
-            <div id="jupiter-terminal" class="flex items-center justify-center">
-                <p>Loading Jupiter terminal...</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="border-black border-2 bg-secondary flex flex-col justify-center">
-        <iframe 
-            src="https://jup.ag/swap/SOL-APPLE" 
-            frameborder="0"
-            title="Jupiter Swap"
-            style="width: 100%; height: 600px; border: none;"
-        ></iframe>
-    </div>
-
-    <!-- Remove or comment out the old Jupiter initialization code -->
-    <!--
     <script>
         function loadJupiterScript() {
             const script = document.createElement('script');
             script.src = 'https://terminal.jup.ag/main-v2.js';
             script.onload = function() {
-                initJupiter();
-            };
-            script.onerror = function() {
-                console.error('Failed to load Jupiter script.');
-                const terminal = document.getElementById('jupiter-terminal');
-                if (terminal) {
-                    terminal.innerHTML = `<p class="text-red-600">Unable to load Jupiter terminal. Please check your internet connection or try again later.</p>`;
-                }
+                window.Jupiter.init({
+                    displayMode: 'integrated',
+                    integratedTargetId: 'jupiter-terminal',
+                    endpoint: 'https://api.mainnet-beta.solana.com'
+                });
             };
             document.body.appendChild(script);
         }
 
-        document.addEventListener('DOMContentLoaded', function() {
-            console.log('Loading Jupiter script...');
-            loadJupiterScript();
-        });
+        document.addEventListener('DOMContentLoaded', loadJupiterScript);
     </script>
-    -->
 </body>
 </html>
