--- a/index.html
+++ b/index.html
@@ -211,10 +211,19 @@
                     <div class="space-y-6">
                         <div class="space-y-4">
                             <h3 class="text-2xl font-semibold text-gray-800">Steps to buy:</h3>
-                            <ol class="list-decimal list-inside space-y-2 text-gray-700">
-                                <li>Connect your Phantom wallet</li>
-                                <li>Select the tokens you want to swap</li>
-                                <li>Confirm the transaction</li>
+                            <ol class="space-y-4">
+                                <li class="flex items-center">
+                                    <span class="flex-shrink-0 w-8 h-8 rounded-full bg-gradient-to-r from-[#8d6748] to-[#bfa58a] flex items-center justify-center text-white font-bold mr-3">1</span>
+                                    <span class="text-gray-700">Connect your Phantom wallet</span>
+                                </li>
+                                <li class="flex items-center">
+                                    <span class="flex-shrink-0 w-8 h-8 rounded-full bg-gradient-to-r from-[#8d6748] to-[#bfa58a] flex items-center justify-center text-white font-bold mr-3">2</span>
+                                    <span class="text-gray-700">Select the tokens you want to swap</span>
+                                </li>
+                                <li class="flex items-center">
+                                    <span class="flex-shrink-0 w-8 h-8 rounded-full bg-gradient-to-r from-[#8d6748] to-[#bfa58a] flex items-center justify-center text-white font-bold mr-3">3</span>
+                                    <span class="text-gray-700">Confirm the transaction</span>
+                                </li>
                             </ol>
                         </div>
                     </div>
